<resources>
    <string name="app_name">Veterinaria</string>
    <string name="action_settings">Settings</string>
    <string name="tituloVeterinaria">Veterinaria Rabito</string>
    <string name="textoVeterinaria">La clínica veterinaria Mar de colas nacio el dia 15 de diciembre del 2011, de una combinación del gran amor por los animales y el profesionalismo de nuestros médicos veterinario y viendo la necesidad de tener un centro de salud integral en el que todo momento estemos velando por el bienestar de los animales con médicos veterinarios altamente capacitados</string>
    <string name="agregar">Agregar</string>
    <string name="txt_nombre_mascota">Nombre</string>
    <string name="txt_sexo_mascota">Sexo</string>
    <string name="txt_peso_mascota">Peso</string>
    <string name="txt_color_mascota">Color</string>
    <string name="txt_raza_mascota">Raza</string>
    <string name="txt_edad_mascota">Edad</string>
    <string name="txt_cumpleanos_mascota">Cumpleaños</string>
    <string name="txt_esterilizado_mascota">Esterilizado</string>
    <string name="txt_alimentacion_mascota">Alimentación</string>
    <string name="txt_tratamiento_mascota">Tratamiento</string>
    <string name="rbt_hembra_mascota">Hembra</string>
    <string name="rbt_macho_mascota">Macho</string>
    <string name="rbt_si">Si</string>
    <string name="rbt_no">No</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_limpiar">Limpiar</string>
    <string name="btn_recordatorio">Recordatorio</string>
    <string name="btn_reserva">Reservar Cita</string>
    <string name="btn_editar_mascota">Editar</string>
    <string name="btn_dueno">Mi dueño</string>
    <string name="btn_tomar_foto">Tomar foto</string>
    <string name="btn_examinar">Examinar</string>
    <string-array name="Games">
        <item>League of Legends</item>
        <item>Diablo III</item>
        <item>God of War</item>
        <item>Halo 4</item>
        <item>StarCraft II</item>
    </string-array>
    <string-array name="Sede">
        <item>La Marina</item>
        <item>Pueblo Libre</item>
    </string-array>
    <string name="title_activity_contactenos">Contactenos</string>
    <string name="title_activity_descripcion_mascota">Detalle Mascota</string>
    <string name="title_activity_registro_mascota">Registro Mascota</string>
    <string name="title_activity_registro_cita">Registro Cita</string>

    <string name="lifecycle_method_list">Lifecycle Method List</string>
    <string name="activity_status">Activity Status</string>
    <string name="dialog_text">Simple Dialog</string>

    <string name="activity_a_label">Banos</string>
    <string name="activity_b_label">Peluqueria</string>
    <string name="activity_c_label">Vacunas</string>
    <string name="activity_d_label">Citas</string>

    <string name="btn_editar">Editar</string>
    <string name="btn_guardar">Guardar</string>
    <string name="registrar_cuenta">Registrar Cuenta</string>
    <string name="lbl_historia">Historia</string>
    <string name="lbl_mascota">Mascota</string>
    <string name="lbl_noticia">Promociones</string>
    <string name="lbl_logueo">Logueo</string>
    <string name="lbl_duenio">Mis Datos</string>
    <string name="lbl_servicios">Servicios</string>
    <string name="lbl_cuenta">Cuenta</string>
    <string name="lbl_recordatorio">Recordatorio</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="lbl_registrarse">Registrate</string>
    <string name="opc_recordatorio">Recordatorio</string>
    <string name="opc_reserva">Reservar Cita</string>
    <string name="opc_editar">Editar</string>
    <string name="title_activity_navegacion_recordatorio">NavegacionRecordatorioActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="opc_medicacion">Medicación</string>
    <string name="opc_peluqueria">Peluqueria</string>
    <string name="opc_banio">Baño</string>
    <string name="opc_vacuna">Vacunas</string>
    <string name="opc_cita">Citas</string>
    <string name="opc_menu_principal">Menu</string>
    <string name="opc_mis_servicios">Mis Servicios</string>
    <string name="opc_mis_mascotas">Mis Mascotas</string>
    <string name="opc_mis_citas">Mis Citas</string>
    <string name="opc_perfil">Perfil</string>
    <string name="opc_sesion">Cerrar sesión</string>
    <string name="opc_promocion">Promociones</string>
    <string name="opc_contacto">Contacto</string>
    <string name="opc_inicio">Inicio</string>

</resources>
