<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_height="match_parent"
                android:text="@string/txt_nombre_mascota"
                style="@style/TextRegistroMascota"/>
            <EditText
                android:layout_height="match_parent"
                android:id="@+id/edtnombre"
                style="@style/TextRegistroMascota"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">
            <TextView
                android:layout_height="match_parent"
                android:text="@string/txt_sexo_mascota"
                style="@style/TextRegistroMascota"/>

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <RadioButton
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/rbt_hembra_mascota"
                    android:id="@+id/edthembra"/>
                <RadioButton
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/rbt_macho_mascota"
                    android:id="@+id/edtmacho"/>
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_height="match_parent"
                android:text="@string/txt_peso_mascota"
                style="@style/TextRegistroMascota"/>
            <EditText
                android:layout_height="match_parent"
                android:id="@+id/edtpeso"
                style="@style/EditRegistroMascota"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_height="match_parent"
                android:text="@string/txt_raza_mascota"
                style="@style/TextRegistroMascota"/>
            <EditText
                android:layout_height="match_parent"
                android:id="@+id/edtraza"
                style="@style/EditRegistroMascota"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_height="match_parent"
                android:text="@string/txt_color_mascota"
                style="@style/TextRegistroMascota"/>
            <EditText
                android:layout_height="match_parent"
                android:id="@+id/edtcolor"
                style="@style/EditRegistroMascota"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_height="match_parent"
                android:text="@string/txt_cumpleanos_mascota"
                style="@style/TextRegistroMascota"/>
            <EditText
                android:layout_height="match_parent"
                android:id="@+id/edtcumpleanos"
                style="@style/EditRegistroMascota"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_height="match_parent"
                android:text="@string/txt_esterilizado_mascota"
                style="@style/TextRegistroMascota"/>
            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <RadioButton
                    android:id="@+id/rbtnsi"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/rbt_si"/>
                <RadioButton
                    android:id="@+id/rbtno"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:text="@string/rbt_no"/>
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_height="match_parent"
                android:text="@string/txt_alimentacion_mascota"
                style="@style/TextRegistroMascota"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edtalimentacion"
                style="@style/EditRegistroMascota"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_registrar"
            android:onClick="mGuardarMascota"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_limpiar"
            android:onClick="mLimpiarRegistro"/>
    </LinearLayout>

</RelativeLayout>