<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:id="@+id/imgfoto"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imgfoto"
        android:text="Leo"
        android:textSize="20dp"
        style="@style/TextRegistroMascota"
        android:id="@+id/txtnombre"/>

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/imgfoto"
        android:text="@string/txt_edad_mascota"
        android:layout_below="@id/txtnombre"
        style="@style/TextRegistroMascota"
        android:id="@+id/txtedad"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtedad"
        android:layout_below="@id/txtnombre"
        style="@style/TextRegistroMascota"
        android:text="1 año"
        android:id="@+id/txtanios"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgfoto"
        android:layout_gravity="center_horizontal">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_height="match_parent"
                android:text="@string/txt_cumpleanos_mascota"
                style="@style/TextRegistroMascota"/>
            <TextView
                android:layout_height="match_parent"
                android:text="01/05"
                android:id="@+id/txtcumpleanos"
                style="@style/TextRegistroMascota"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_height="match_parent"
                android:text="@string/txt_color_mascota"
                style="@style/TextRegistroMascota"/>
            <TextView
                android:layout_height="match_parent"
                android:text="Blanco"
                android:id="@+id/txtcolor"
                style="@style/TextRegistroMascota"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_height="match_parent"
                android:text="@string/txt_sexo_mascota"
                style="@style/TextRegistroMascota"/>
            <TextView
                android:layout_height="match_parent"
                android:text="Macho"
                android:id="@+id/txtsexo"
                style="@style/TextRegistroMascota"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">
            <TextView
                android:layout_height="match_parent"
                android:text="@string/txt_raza_mascota"
                style="@style/TextRegistroMascota"/>
            <TextView
                android:layout_height="match_parent"
                android:text="Cocker"
                android:id="@+id/txtraza"
                style="@style/TextRegistroMascota"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_height="match_parent"
                android:text="@string/txt_peso_mascota"
                style="@style/TextRegistroMascota"/>
            <TextView
                android:layout_height="match_parent"
                android:text="20kilos"
                android:id="@+id/txtpeso"
                style="@style/TextRegistroMascota"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_height="match_parent"
                android:text="@string/txt_alimentacion_mascota"
                style="@style/TextRegistroMascota"/>
            <TextView
                android:layout_height="match_parent"
                android:text="Ricocan"
                android:id="@+id/txtalimentacion"
                style="@style/TextRegistroMascota"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:layout_height="match_parent"
                android:text="@string/txt_tratamiento_mascota"
                style="@style/TextRegistroMascota"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Un comprimido al dia"
                android:id="@+id/txttratamiento"
                android:padding="5dp"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>